force-app/main/default/objects/Quote/fields/Additional_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Agreements__c</fullName>
    <description>Additional agreements that should be included in the contract document</description>
    <inlineHelpText>Additional agreements that should be included in the contract document</inlineHelpText>
    <label>Additional Agreements OLD</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>