force-app/main/default/objects/Quote/fields/AdditionalAgreements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalAgreements__c</fullName>
    <description>Additional agreements made with the Customer</description>
    <inlineHelpText>Additional agreements made with the Customer</inlineHelpText>
    <label>Additional Agreements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>