force-app/main/default/objects/Quote/fields/Blinds_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Blinds_Total_Price__c</fullName>
    <label>Blinds Total Price</label>
    <summarizedField>QuoteLineItem.fxLineTotalPriceNoTax__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.Cost_Type__c</field>
        <operation>equals</operation>
        <value>verhot</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>