force-app/main/default/objects/Quote/fields/BusinessTypeAttribute__c.field-meta.xml
<CustomField>
    <fullName>BusinessTypeAttribute__c</fullName>
    <description>Attribute to Identify the Type of Business</description>
    <formula>Text(BusinessType__c)</formula>
    <inlineHelpText>Attribute to Identify the Type of Business e.g. Consumer, Reseller, Project</inlineHelpText>
    <label>Business Type Attribute</label>
    <type>Text</type>
</CustomField>