force-app/main/default/objects/Quote/fields/Customer_reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_reference__c</fullName>
    <description>customer reference, field on invoice</description>
    <inlineHelpText>Payment terms additional agreements</inlineHelpText>
    <label>Customer reference OLD</label>
    <type>TextArea</type>
</CustomField>