force-app/main/default/objects/Quote/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <description>customer Reference</description>
    <inlineHelpText>Customer specific Indentifier for the Offer</inlineHelpText>
    <label>Customer Reference</label>
    <type>TextArea</type>
</CustomField>