force-app/main/default/objects/Quote/fields/DeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveryDate__c</fullName>
    <description>The Data when goods are delivered to the Site</description>
    <inlineHelpText>The Data when goods are delivered to the Site</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>