force-app/main/default/objects/Quote/fields/DeliveryTerms__c.field-meta.xml
<CustomField>
    <fullName>DeliveryTerms__c</fullName>
    <description>Logistic Delivery Terms for the order</description>
    <inlineHelpText>Logistic Delivery Terms for the order</inlineHelpText>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Delivery_Terms</valueSetName>
    </valueSet>
</CustomField>