force-app/main/default/objects/Quote/fields/DeliveryWeek__c.field-meta.xml
<CustomField>
    <fullName>DeliveryWeek__c</fullName>
    <description>The Week when Delivery and Installation takes place</description>
    <formula>TEXT(ISOWEEK(PromisedDate__c))&amp;&quot;/&quot;&amp;TEXT(YEAR(PromisedDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Week when Delivery and Installation takes place</inlineHelpText>
    <label>Delivery Week</label>
    <type>Text</type>
</CustomField>