force-app/main/default/objects/Quote/fields/Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Discount_Total__c</fullName>
    <description>Calculated Total Quote Discount</description>
    <formula>IF(AND(List_Price_Total__c&gt;0,Sales_Price_Total__c &gt;0),(1 - ( List_Price_Total__c/Sales_Price_Total__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>