force-app/main/default/objects/Quote/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Factory that will produce the installation</description>
    <inlineHelpText>Reference to the Factory where the Production is done</inlineHelpText>
    <label>Factory</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>