force-app/main/default/objects/Quote/fields/fxDiscountTotal__c.field-meta.xml
<CustomField>
    <fullName>fxDiscountTotal__c</fullName>
    <description>Calculated Total Quote Discount</description>
    <formula>IF(AND(TotalListPrice__c&gt;0,TotalSalesPrice__c &gt;0),(1 - ( TotalListPrice__c/TotalSalesPrice__c )),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>