force-app/main/default/objects/Quote/fields/InvoicingAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoicingAddress__c</fullName>
    <label>Invoicing Address</label>
    <type>Address</type>
</CustomField>