force-app/main/default/objects/Quote/fields/LastCalculatedTime__c.field-meta.xml
<CustomField>
    <fullName>LastCalculatedTime__c</fullName>
    <label>Last Calculated Time</label>
    <type>DateTime</type>
</CustomField>