force-app/main/default/objects/Quote/fields/List_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Total__c</fullName>
    <label>List Price Total</label>
    <summarizedField>QuoteLineItem.fxList__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>