force-app/main/default/objects/Quote/fields/OfficeAttribute__c.field-meta.xml
<CustomField>
    <fullName>OfficeAttribute__c</fullName>
    <formula>TEXT(Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Attribute</label>
    <type>Text</type>
</CustomField>