force-app/main/default/objects/Quote/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <description>Organization chosen in Opportunity</description>
    <formula>TEXT(Opportunity.Organization__c)</formula>
    <label>Organization</label>
    <type>Text</type>
</CustomField>