force-app/main/default/objects/Quote/fields/PriceBook2Id__c.field-meta.xml
<CustomField>
    <fullName>PriceBook2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>