force-app/main/default/objects/Quote/fields/Promised_date__c.field-meta.xml
<CustomField>
    <fullName>Promised_date__c</fullName>
    <description>Customer promise date to end installation</description>
    <inlineHelpText>Customer promise date to end installation</inlineHelpText>
    <label>Promised date</label>
    <type>Date</type>
</CustomField>