force-app/main/default/objects/Quote/fields/Promised_delivery_week__c.field-meta.xml
<CustomField>
    <fullName>Promised_delivery_week__c</fullName>
    <description>Week and year for the installation finishing</description>
    <formula>TEXT(ISOWEEK(Promised_date__c))&amp;&quot;/&quot;&amp;TEXT(YEAR(Promised_date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Week and year for the installation finishing</inlineHelpText>
    <label>Promised delivery week</label>
    <type>Text</type>
</CustomField>