force-app/main/default/objects/Quote/fields/PromisedDate__c.field-meta.xml
<CustomField>
    <fullName>PromisedDate__c</fullName>
    <description>Date when Delivery and Installation should be completed as Agreed with the Customer</description>
    <inlineHelpText>Date when Delivery and Installation should be completed as Agreed with the Customer</inlineHelpText>
    <label>Promised Date</label>
    <type>Date</type>
</CustomField>