force-app/main/default/objects/Quote/fields/Sales_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price_Total__c</fullName>
    <label>Sales Price Total</label>
    <summarizedField>QuoteLineItem.fxSales__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>