force-app/main/default/objects/Quote/fields/TaxPercentage__c.field-meta.xml
<CustomField>
    <fullName>TaxPercentage__c</fullName>
    <label>Value Added Tax Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>