force-app/main/default/objects/Quote/fields/Total_Product_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Cost__c</fullName>
    <description>The Total Product Cost of all Quote Line Items</description>
    <inlineHelpText>The Total Product Cost of all Quote Line Items</inlineHelpText>
    <label>Total Product Cost</label>
    <summarizedField>QuoteLineItem.fxCost__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>