force-app/main/default/objects/Quote/fields/TotalFactoryPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalFactoryPrice__c</fullName>
    <description>The Total Factory Price of all Quote Line Items</description>
    <inlineHelpText>The Total Factory Price of all Quote Line Items</inlineHelpText>
    <label>Total Factory Price</label>
    <summarizedField>QuoteLineItem.fxFactory__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>