force-app/main/default/objects/Quote/fields/TotalListPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalListPrice__c</fullName>
    <description>The Total List Price of all Quote Line Items</description>
    <inlineHelpText>The Total List Price of all Quote Line Items</inlineHelpText>
    <label>Total List Price</label>
    <summarizedField>QuoteLineItem.fxList__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>