force-app/main/default/objects/Quote/fields/TotalSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalSalesPrice__c</fullName>
    <description>The Total Sales Price of all Quote Line Items</description>
    <inlineHelpText>The Total Sales Price of all Quote Line Items</inlineHelpText>
    <label>Total Sales Price</label>
    <summarizedField>QuoteLineItem.fxSales__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>