force-app/main/default/objects/Quote/fields/VATPercentage__c.field-meta.xml
<CustomField>
    <fullName>VATPercentage__c</fullName>
    <description>The VAT Percentage Applicable for this Quote</description>
    <inlineHelpText>The VAT Percentage Applicable for this Quote</inlineHelpText>
    <label>VAT Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>