force-app/main/default/objects/Quote/fields/Work_Number_Name__c.field-meta.xml
<CustomField>
    <fullName>Work_Number_Name__c</fullName>
    <description>Free text that is moved to invoice (external)</description>
    <label>Work Number Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>